# vdb_voxelgrid

./: .gitattributes  .gitignore  CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
src/: CMakeLists.txt
src/vdbvoxelgrid/: CMakeLists.txt  __init__.py
src/vdbvoxelgrid/pybind/: CMakeLists.txt  vdb_voxelgrid.py  vdbvoxelgrid_pybind.cpp
src/vdbvoxelgrid/vdbvoxelgrid/: CMakeLists.txt  Tracer.h  VDBVoxelgridConfig.cmake.in  VoxelGrid.cpp  VoxelGrid.h
src/vdbvoxelgrid/vdbvoxelgrid/cmake/: Install.cmake
